--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,19 @@
 [tool.poetry]
 name = "pie"
-version = "0.0.8"
-description = "Extract Indicators of Compromise (IOCs) from PDF documents"
+version = "0.0.9"
+description = "Extracts text from PDF and searches for IOCs"
 authors = ["Mitch Haddadi <12067255+dfirsec@users.noreply.github.com>"]
 license = "MIT"
+readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
-colorama = "^0.4.5"
-pdfplumber = "^0.7.4"
-requests = "^2.28.1"
-tld = "^0.12.6"
+python = "^3.11"
+colorama = "^0.4.6"
+pdfplumber = "^0.8.0"
+requests = "^2.28.2"
+tld = "^0.13"
 
-[tool.poetry.dev-dependencies]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
