--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 colorama = "^0.4.6"
-pdfplumber = "^0.8.0"
+pdfplumber = "^0.11.0"
+pdfminer-six = "^20231228"
 requests = "^2.31.0"
 
 
