--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-colorama = "^0.4.6"
 pdfplumber = "^0.11.0"
 pdfminer-six = "^20231228"
 requests = "^2.31.0"
+rich = "^13.7.0"
 
 
 [build-system]
